--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,11 @@
 TZ=UTC
 PLAYERS=16
-PORT=8211
-PUID=1000
-PGID=1000
 MULTITHREADING=false
 COMMUNITY=false
 PUBLIC_IP=
-PUBLIC_PORT=
-SERVER_NAME=palworld-server-docker by Thijs van Loef
-SERVER_DESCRIPTION=palworld-server-docker by Thijs van Loef
-SERVER_PASSWORD=worldofpals
-ADMIN_PASSWORD=adminPasswordHere
-UPDATE_ON_BOOT=true
-RCON_ENABLED=true
-RCON_PORT=25575
-QUERY_PORT=27015
+SERVER_NAME=synergy-server-docker by Teller
+SERVER_DESCRIPTION=synergy-server-docker by Teller
+SERVER_PASSWORD=multigordonfreemen
 BACKUP_ENABLED=true
 DELETE_OLD_BACKUPS=false
 OLD_BACKUP_DAYS=30
@@ -26,73 +17,6 @@ AUTO_REBOOT_ENABLED=false
 AUTO_REBOOT_EVEN_IF_PLAYERS_ONLINE=false
 AUTO_REBOOT_WARN_MINUTES=5
 AUTO_REBOOT_CRON_EXPRESSION=0 0 * * *
-ENABLE_PLAYER_LOGGING=true
-PLAYER_LOGGING_POLL_PERIOD=5
-
-DIFFICULTY=None
-DAYTIME_SPEEDRATE=1.000000
-NIGHTTIME_SPEEDRATE=1.000000
-EXP_RATE=1.000000
-PAL_CAPTURE_RATE=1.000000
-PAL_SPAWN_NUM_RATE=1.000000
-PAL_DAMAGE_RATE_ATTACK=1.000000
-PAL_DAMAGE_RATE_DEFENSE=1.000000
-PLAYER_DAMAGE_RATE_ATTACK=1.000000
-PLAYER_DAMAGE_RATE_DEFENSE=1.000000
-PLAYER_STOMACH_DECREASE_RATE=1.000000
-PLAYER_STAMINA_DECREASE_RATE=1.000000
-PLAYER_AUTO_HP_REGEN_RATE=1.000000
-PLAYER_AUTO_HP_REGEN_RATE_IN_SLEEP=1.000000
-PAL_STOMACH_DECREASE_RATE=1.000000
-PAL_STAMINA_DECREASE_RATE=1.000000
-PAL_AUTO_HP_REGEN_RATE=1.000000
-PAL_AUTO_HP_REGEN_RATE_IN_SLEEP=1.000000
-BUILD_OBJECT_DAMAGE_RATE=1.000000
-BUILD_OBJECT_DETERIORATION_DAMAGE_RATE=1.000000
-COLLECTION_DROP_RATE=1.000000
-COLLECTION_OBJECT_HP_RATE=1.000000
-COLLECTION_OBJECT_RESPAWN_SPEED_RATE=1.000000
-ENEMY_DROP_ITEM_RATE=1.000000
-DEATH_PENALTY=All
-ENABLE_PLAYER_TO_PLAYER_DAMAGE=False
-ENABLE_FRIENDLY_FIRE=False
-ENABLE_INVADER_ENEMY=True
-ACTIVE_UNKO=False
-ENABLE_AIM_ASSIST_PAD=True
-ENABLE_AIM_ASSIST_KEYBOARD=False
-DROP_ITEM_MAX_NUM=3000
-DROP_ITEM_MAX_NUM_UNKO=100
-BASE_CAMP_MAX_NUM=128
-BASE_CAMP_WORKER_MAX_NUM=15
-DROP_ITEM_ALIVE_MAX_HOURS=1.000000
-AUTO_RESET_GUILD_NO_ONLINE_PLAYERS=False
-AUTO_RESET_GUILD_TIME_NO_ONLINE_PLAYERS=72.00000
-GUILD_PLAYER_MAX_NUM=20
-BASE_CAMP_MAX_NUM_IN_GUILD=4
-PAL_EGG_DEFAULT_HATCHING_TIME=72.00000
-WORK_SPEED_RATE=1.000000
-AUTO_SAVE_SPAN=30.000000
-IS_MULTIPLAY=False
-IS_PVP=False
-CAN_PICKUP_OTHER_GUILD_DEATH_PENALTY_DROP=False
-ENABLE_NON_LOGIN_PENALTY=True
-ENABLE_FAST_TRAVEL=True
-IS_START_LOCATION_SELECT_BY_MAP=True
-EXIST_PLAYER_AFTER_LOGOUT=False
-ENABLE_DEFENSE_OTHER_GUILD_PLAYER=False
-INVISIBLE_OTHER_GUILD_BASE_CAMP_AREA_FX=False
-COOP_PLAYER_MAX_NUM=4
-REGION=
-USEAUTH=True
-BAN_LIST_URL=https://api.palworldgame.com/api/banlist.txt
-REST_API_ENABLED=False
-REST_API_PORT=8212
-SHOW_PLAYER_LIST=True
-# ALLOW_CONNECT_PLATFORM Defaults to "Steam" if not set, set this to "Xbox" if you want to host a server for Xbox players. CROSSPLAY BETWEEN XBOX-STEAM IS NOT YET SUPPORTED
-ALLOW_CONNECT_PLATFORM=Steam
-USE_BACKUP_SAVE_DATA=True
-USE_DEPOT_DOWNLOADER=False
-INSTALL_BETA_INSIDER=False
 
 # Box64 Configs (Only relevant for ARM64 hosts)
 # These can be adjusted if the server keeps on crashing.
