--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -5,6 +5,7 @@ on:  # yamllint disable-line rule:truthy
   push:
     branches:
       - main
+      - develop
 
 run-name: Pull request - ${{ github.event.pull_request.number }}
 jobs:
